Massive Update
- Now deletes missing sonimortets, fixes #33
- Various bugs found to be related to linux, closes #31, closes #32. May reopen both/either if issue(s) persist in any meaningful way.
- Made better row-clear audio tracks, better gameOver audio track, closes #27
- Logs added to .gitignore
- for loop spacing made more consistent
- Switched from util timer to swing timer
- Writes file when quit is pressed again
- SaveData import optimization
- Switched back to ArrayList
- Changed when GameplayScene is repainted in some cases
- Throws/Catches concurrent modification errors and retries in SirtetGrid